--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.app {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -17,8 +17,9 @@ body {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
-  .header { text-align: center;
+@media (max-width: 768px) {
+  .header {
+    text-align: center;
   }
 }
 .main {
@@ -29,22 +30,24 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
 }
-ul {
-  margin:0;
+.list {
+  margin: 0;
   padding: 0px;
 }
-li, h3 {
-  list-style:none;
+.list-item,
+.block-title {
+  list-style: none;
 }
-input,button{
-  outline:none;
+.input,
+.button {
+  outline: none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -53,12 +56,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+.block-title,
+.label-new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +70,7 @@ label[for='new-task'] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,70 +82,69 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input-text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.label-new-task {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list-item > .input-checkbox {
   margin: 0 10px;
 }
-li > label {
+.list-item > .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >  input[type="text"] {
-  width: 226px
+.list-item > .input-text {
+  width: 226px;
 }
-button.delete img {
+.button-delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button-delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
-  text-decoration: line-through
+.list #completed-tasks .label {
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-  display:none
+.list .list-item .input-text {
+  display: none;
 }
 
-ul li.edit-mode input[type=text] {
-  display:inline-block;
-  width:224px
+.list .list-item .edit-mode .input-text {
+  display: inline-block;
+  width: 224px;
 }
 
-ul li.edit-mode label {
-  display:none;
+.list .list-item .edit-mode .label {
+  display: none;
 }
